DEV-8: Use explicit linking

--- a/test_package/CMakeLists.txt
+++ b/test_package/CMakeLists.txt
@@ -4,6 +4,9 @@ cmake_minimum_required(VERSION 2.8)
 include(${CMAKE_BINARY_DIR}/conanbuildinfo.cmake)
 CONAN_BASIC_SETUP()
 
+SET(GCC_EXPLICIT_LINK_FLAGS    "-lm")
+SET( CMAKE_EXE_LINKER_FLAGS  "${CMAKE_EXE_LINKER_FLAGS} ${GCC_EXPLICIT_LINK_FLAGS}" )
+
 SET(VERBOSE 1)
 SET(CMAKE_VERBOSE_MAKEFILE 1)
 
