--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,9 @@
 ################################################################################
 
 /.vs/bitprim-conan-gmp/v15/.suo
+/.vs/bitprim-conan-gmp/v15/Browse.VC.db
+/.vs/bitprim-conan-gmp/v15/Browse.VC.db
+/.vs/bitprim-conan-gmp/v15/Browse.VC.opendb
+/.vs/ProjectSettings.json
+/.vs/slnx.sqlite
+/.vs/slnx.sqlite-journal
