--- a/appveyor.yml
+++ b/appveyor.yml
@@ -15,13 +15,24 @@ environment:
     CONAN_STABLE_BRANCH_PATTERN: "release/*"
 
     matrix:
-        - MINGW_CONFIGURATIONS: "4.9@x86_64@seh@posix, 4.9@x86_64@sjlj@posix, 4.9@x86@sjlj@posix, 4.9@x86@dwarf2@posix"
-        - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2015
-          CONAN_VISUAL_VERSIONS: 12
+        # - MINGW_CONFIGURATIONS: "4.9@x86_64@seh@posix, 4.9@x86_64@sjlj@posix, 4.9@x86@sjlj@posix, 4.9@x86@dwarf2@posix"
+        # - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2015
+        #   CONAN_VISUAL_VERSIONS: 12
+        # - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2015
+        #   CONAN_VISUAL_VERSIONS: 14
+        # - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
+        #   CONAN_VISUAL_VERSIONS: 15
+
+        #- APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2015
+        #  CONAN_VISUAL_VERSIONS: 12
         - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2015
           CONAN_VISUAL_VERSIONS: 14
         - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
           CONAN_VISUAL_VERSIONS: 15
+
+        # - MINGW_CONFIGURATIONS: "4.9@x86_64@seh@posix" #4.9@x86_64@sjlj@posix
+        - MINGW_CONFIGURATIONS: "5.4@x86_64@seh@posix" #5.4@x86_64@sjlj@posix
+        - MINGW_CONFIGURATIONS: "7.2@x86_64@seh@posix" #7.2@x86_64@sjlj@posix
 
 install:
   - set PATH=%PATH%;%PYTHON%/Scripts/
