--- a/appveyor.yml
+++ b/appveyor.yml
@@ -14,11 +14,14 @@ environment:
     CONAN_STABLE_BRANCH_PATTERN: "release/*"
 
     matrix:
+        - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2019
+          CONAN_VISUAL_VERSIONS: 16
+
         - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
           CONAN_VISUAL_VERSIONS: 15
           VS150COMNTOOLS: "C:\\Program Files (x86)\\Microsoft Visual Studio\\2017\\Community\\Common7\\Tools\\"
 
-       - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2015
+        - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2015
           CONAN_VISUAL_VERSIONS: 14
 
         # - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2015
@@ -26,6 +29,7 @@ environment:
  
         # - MINGW_CONFIGURATIONS: "7@x86_64@seh@posix, 6@x86_64@seh@posix, 5@x86_64@seh@posix, 4.9@x86_64@seh@posix"
 
+        - MINGW_CONFIGURATIONS: "9@x86_64@seh@posix"
         - MINGW_CONFIGURATIONS: "8@x86_64@seh@posix"
         - MINGW_CONFIGURATIONS: "7@x86_64@seh@posix"
         - MINGW_CONFIGURATIONS: "6@x86_64@seh@posix"
