modern compilers version

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -31,9 +31,9 @@ environment:
 
         - MINGW_CONFIGURATIONS: "9@x86_64@seh@posix"
         - MINGW_CONFIGURATIONS: "8@x86_64@seh@posix"
-        - MINGW_CONFIGURATIONS: "7@x86_64@seh@posix"
-        - MINGW_CONFIGURATIONS: "6@x86_64@seh@posix"
-        - MINGW_CONFIGURATIONS: "5@x86_64@seh@posix"
+        # - MINGW_CONFIGURATIONS: "7@x86_64@seh@posix"
+        # - MINGW_CONFIGURATIONS: "6@x86_64@seh@posix"
+        # - MINGW_CONFIGURATIONS: "5@x86_64@seh@posix"
         # - MINGW_CONFIGURATIONS: "4.9@x86_64@seh@posix"
         
 install:
