test Cirrus CI 6

--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -8,8 +8,29 @@ cirrus_gcc_test_task:
   #     STDFLAG: -std=c++14
   #     STDFLAG: -std=c++17
   #     STDFLAG: -std=c++2a
+  env:
+    CONAN_GCC_VERSIONS: 9
+    CONAN_REFERENCE: "gmp/6.1.2"
+    CONAN_USERNAME: "kth"
+    CONAN_LOGIN_USERNAME: "fpelliccioni"
+    CONAN_CHANNEL: "stable"
+    CONAN_UPLOAD: "https://api.bintray.com/conan/k-nuth/kth"
+    CONAN_STABLE_BRANCH_PATTERN: "release/*"
+
   # version_script: make -C test showcxxversion
-  build_script: apt-get update && apt-get install -f -y python2.7-dev && wget https://bootstrap.pypa.io/get-pip.py && python get-pip.py && chmod +x .travis/install.sh && chmod +x .travis/run.sh && ./.travis/install.sh && ./.travis/run.sh
+  install_script:
+    - apt-get update 
+    - apt-get install -f -y python2.7-dev
+    - wget https://bootstrap.pypa.io/get-pip.py 
+    - python get-pip.py 
+    - chmod +x .travis/install.sh 
+    - chmod +x .travis/run.sh 
+    - ./.travis/install.sh
+
+  build_script:
+    - ./.travis/run.sh
+
+  # build_script: apt-get update && apt-get install -f -y python2.7-dev && wget https://bootstrap.pypa.io/get-pip.py && python get-pip.py && chmod +x .travis/install.sh && chmod +x .travis/run.sh && ./.travis/install.sh && ./.travis/run.sh
   # test_script: wget https://bootstrap.pypa.io/get-pip.py && python get-pip.py && chmod +x .travis/install.sh && chmod +x .travis/run.sh && ./.travis/install.sh && ./.travis/run.sh
 
 
