--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -58,12 +58,17 @@ cirrus_freebsd_clang_test_task:
   install_script:
     # - wget https://bootstrap.pypa.io/get-pip.py 
     # - python get-pip.py 
-    - chmod +x .travis/install.sh 
-    - chmod +x .travis/run.sh 
-    - ./.travis/install.sh
+    # - chmod +x .travis/install.sh 
+    # - chmod +x .travis/run.sh 
+    # - ./.travis/install.sh
+    - pip install conan --upgrade
+    - pip install conan_package_tools
+    - pip install cpuid --upgrade
+    - conan user
 
   build_script:
-    - ./.travis/run.sh
+    # - ./.travis/run.sh
+    python build.py
 
 
 
