--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -61,6 +61,15 @@ cirrus_freebsd_clang_test_task:
     # - chmod +x .travis/install.sh 
     # - chmod +x .travis/run.sh 
     # - ./.travis/install.sh
+
+    - freebsd-version
+    - which python
+    - ln -s /usr/local/bin/python3.6 /usr/local/bin/python
+    - python --version
+    - pkg install py36-pip
+    - which pip-3.6
+    - pip install --upgrade pip
+
     - pip install conan --upgrade
     - pip install conan_package_tools
     - pip install cpuid --upgrade
