--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,16 @@
+branches:
+  only:
+  - master
+  # - /^v\d+\.\d+\.\d+$/
+  - dev
+  - /^release-\d+\.\d+\.\d+$/
+  - /^release_\d+\.\d+\.\d+$/
+  - /^hotfix-\d+\.\d+\.\d+$/
+  - /^hotfix_\d+\.\d+\.\d+$/
+  - /^feature-ci-.+$/
+  - /^feature_ci_.+$/
+  - /^feature-travis-.+$/
+  - /^feature_travis_.+$/
 
 env:
    global:
