--- a/.travis.yml
+++ b/.travis.yml
@@ -63,8 +63,8 @@ matrix:
       - <<: *linux
         env: CONAN_CLANG_VERSIONS=8 CONAN_DOCKER_IMAGE=conanio/clang8
 
-      - <<: *linux
-        env: CONAN_CLANG_VERSIONS=7.0 CONAN_DOCKER_IMAGE=conanio/clang7
+      # - <<: *linux
+      #   env: CONAN_CLANG_VERSIONS=7.0 CONAN_DOCKER_IMAGE=conanio/clang7
 
       # - <<: *linux
       #   env: CONAN_CLANG_VERSIONS=6.0 CONAN_DOCKER_IMAGE=conanio/clang60
@@ -89,12 +89,9 @@ matrix:
         osx_image: xcode10.3
         env: CONAN_APPLE_CLANG_VERSIONS=10.0
 
-      - <<: *osx
-        osx_image: xcode9.4
-        env: CONAN_APPLE_CLANG_VERSIONS=9.1
-
-
-
+      # - <<: *osx
+      #   osx_image: xcode9.4
+      #   env: CONAN_APPLE_CLANG_VERSIONS=9.1
 
       # - <<: *osx
       #   osx_image: xcode9.3
